# material-components-web-miso

./: .gitignore  README.md  pull_request_template.md
sample-app-jsaddle/: Main.hs  README.md  app.cabal  default.nix  material-components-web-elm.min.js  shell.nix
sample-app-jsaddle/Elm/: List.hs
sample-app-jsaddle/Material/: Button.hs  Card.hs  Checkbox.hs  DataTable.hs  Dialog.hs  Elevation.hs  Fab.hs  FormField.hs  HelperText.hs  Icon.hs  IconButton.hs  IconToggle.hs  ImageList.hs  LayoutGrid.hs  LinearProgress.hs  List.hs  Menu.hs  Radio.hs  Ripple.hs  Select.hs  Slider.hs  Snackbar.hs  Switch.hs  Tab.hs  TabBar.hs  TextField.hs  Theme.hs  TopAppBar.hs  Typography.hs
sample-app-jsaddle/Material/Button/: Internal.hs
sample-app-jsaddle/Material/Checkbox/: Internal.hs
sample-app-jsaddle/Material/Chip/: Action.hs  Choice.hs  Filter.hs  Input.hs
sample-app-jsaddle/Material/Chip/Action/: Internal.hs
sample-app-jsaddle/Material/Chip/Choice/: Internal.hs
sample-app-jsaddle/Material/Chip/Filter/: Internal.hs
sample-app-jsaddle/Material/Chip/Input/: Internal.hs
sample-app-jsaddle/Material/ChipSet/: Action.hs  Choice.hs  Filter.hs  Input.hs
sample-app-jsaddle/Material/Drawer/: Dismissible.hs  Modal.hs  Permanent.hs
sample-app-jsaddle/Material/IconButton/: Internal.hs
sample-app-jsaddle/Material/ImageList/: Item.hs
sample-app-jsaddle/Material/ImageList/Item/: Internal.hs
sample-app-jsaddle/Material/List/: Divider.hs  Item.hs
sample-app-jsaddle/Material/Select/: Icon.hs  Item.hs
sample-app-jsaddle/Material/Tab/: Internal.hs
(+5 files in other folders)
