name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:
    Main.hs
  build-depends:
    base, miso, containers, bytestring, aeson
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  js-sources:
    material-components-web-elm.min.js
  default-language:
    Haskell2010
